Fixing overflow and scroll issues in mobile

--- a/public/components/reports/styles/LiveShift.scss
+++ b/public/components/reports/styles/LiveShift.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "../../../styles/variables";
 
 .line {
     display: flex;
@@ -47,7 +47,7 @@
         }
 
         .time {
-            width: 50px;
+            width: 40px;
             direction: ltr;
             margin: 0 10px;
 
