--- a/public/styles/Dashboard.scss
+++ b/public/styles/Dashboard.scss
@@ -43,9 +43,8 @@ $margin: 12px;
             }
 
             .main-container {
-                flex: 1;
+                width: 100%;
                 height: 100%;
-                overflow-x: visible;
             }
         }
     }
